tests/ui/derive/fail_validate_unknown_struct_message_field.rs
#[derive(foundry::Validate)]
#[validate(messages(emali(required = "Email is required.")))]
struct UnknownStructMessageField {
    #[validate(required)]
    email: String,
}

fn main() {}
